Finished draft of the evaluation

--- a/tex/5_Evaluation.tex
+++ b/tex/5_Evaluation.tex
@@ -222,6 +222,21 @@ In the end, our method was capable of identifying 49 violation-related patterns 
 	\label{fig:ev_sankey}
 \end{figure}
 
-% \section{Discussion}
+\section{Discussion}
+
+Even though there are several methods for verifying a system for assurance purposes, such as Model Checking or runtime verification, the structural, dynamic, and organizational complexities of Cyber-Physical systems may become an impediment in this process, both in modeling and in defining the set of properties that will be assessed. The technique proposed in this paper seeks to fill this gap by utilizing well-studied frameworks for modeling the complex link between the discrete-time behavior of software components and the continuous-time acausal equations that govern the physical processes of such systems. Furthermore, the simulated data analysis enables the detection of patterns in data that could not have been accounted for when the system properties were initially elicited. Thus, our technique provides a better understanding of the context in which the CPS will be introduced, allowing the verification process to be enhanced.
+
+Our technique's quantitative evaluation yielded satisfactory results. The use of the Negative Selection Algorithm resulted in performance that was quite close to that of other prominent Machine Learning algorithms, including those specialized in anomaly detection. The NSA gave a low \textit{False Positive} rate in the presence of unseen data, meaning that no damaging mistakes occurred. Aside from that, the examination of the patterns discovered by the detectors was also quite good. We were able to select 49 detectors from the 229 produced detectors that were truly important for characterizing property violations that may occur at runtime. Those detectors were also classified into 11 clusters based on the similarity of the discovered patterns, further assisting the software analyst by displaying the components that are closely connected to the source of the anomalous behavior.
 
 \section{Threats to validity}
+
+\begin{itemize}
+    \item \textbf{Construct validity:} We relied on a documented case study  (BSN) and its publicly accessible data to ensure that we present a valid and sound input data for our evaluation. The specification of the system, in the form of a CGM, as well as the properties derived from it and the observers utilized were all taken from literature. Besides that, the patient profiles were generated based on a randomized process in order to minimize as much as possible bias in the data. However, in spite of our efforts to avoid generating inaccurate data, we were not able to guarantee that the created data represents accurately a real-world circumstance. Further research is required to validate such representation.
+    
+    \item \textbf{Internal validity:} Our evaluation relies significantly on the BSN prototype implemented in Modelica, since the patterns discovered are only as good as the dataset used to find them. Therefore, a correct abstraction of the behavior of the BSN into a model for simulation is paramount. The model must account for as much variability as possibile, according to what will be faced during the execution of the CPS. Nevertheless, it is of our understanding that this is not an easy task. Even with the right tools and state-of-the-art framework, the expert's knowledge of the system is highly required, since several aspects of the system are specific for the medical domain. Besides that, differential equations are used to model the behavior of the physical components, which would also need a more specialized opinion. As stated by Baier and Katoen \cite{2008PrinciplesModelChecking}, "Any verification using model-based techniques is only as good as the model of the system."
+    
+    Moreover, the choice for the binary version of the Negative Selection Algorithm also comes with its disadivantages. Even though modeling the behavior of the CPS as boolean features allows for simplicity and the reverse mapping of binary detectors provide a great level of interpretability, the Binary Negative Selection (BNSA) is well-known for its performance and completeness issues. D'haeseleer et al. \cite{NSADetGen1996} pointed out that the generation of binary detectors is a very time-conusming task, that rises exponentially with the size of the self-set. They also state the possible existence of "holes", which are strings for which is impossible to generate valid detectors. This would account for property violation patterns impossible to be unveiled, thus, decreasing the efficiency of our approach. Finally, they also say that an accurate and stable definition of self is key for the success of the BNSA, which is not always the case due to the dynamic complexities of CPS.
+	
+	\item \textbf{External validity:} Even though our technique is not domain specific, we understand the evaluation's limitations because it was applied in single example of the medical field. Further study of the technique is required to determine the approach's true usefulness for generalization goals. To assess the technique's real applicability for purposes of generalization, more examination of the technique must be done.
+    
+\end{itemize}
