--- a/tex/BSN.tex
+++ b/tex/BSN.tex
@@ -1,3 +1,4 @@
+\label{sec:BSN}
 Without losing generality, the fundamentals of our methodology will be exemplified by a Cyber Physical System from the healthcare domain throughout this work. This chapter provides an overview of the system and its inner workings.
 
 \section{Overview}
