Adding the conlcusion to the document

--- a/qualificacao.tex
+++ b/qualificacao.tex
@@ -48,5 +48,5 @@
     \capitulo{4_Proposal}{Enhancing Property Specification of Cyber-Physical Systems using Negative Selection}
     \capitulo{3_RelatedWork}{Related work}
     \capitulo{5_Evaluation}{Evaluation}
-    % \capitulo{6_Conclusion}{Conclusion and future work}
+    \capitulo{6_Conclusion}{Conclusion and future work}
 \end{document}%
